updated css to fix grid spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .calculator-grid {
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(4,100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
@@ -27,4 +27,8 @@ body {
 }
 .span-two {
     grid-column: span 2;
+}
+.output {
+    background-color: rgba(0,0,0,.75);
+    grid-column: 1 / -1;
 }
